# FTutor1D

./: CMakeLists.txt  Doxyfile  FTutor.pro  FTutor1D.pro  README.md  aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  config.cpp  config.h  defaultsignalsdialog.cpp  defaultsignalsdialog.h  defaultsignalsdialog.ui  displaysignalwidget.cpp  displaysignalwidget.h  displaysignalwidget.ui  helpdialog.cpp  helpdialog.h  helpdialog.ui  localization.cpp  localization.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  signal.cpp  signal.h
QCustomPlot/: qcustomplot.cpp  qcustomplot.h
resources/signals/: constant_0_16.data  constant_1_16.ft1d  cosinus_16.ft1d  cosinus_32.data  gaussian_16.ft1d  gaussian_32.data  gaussian_32.ft1d  impulse_15_32.ft1d  impulse_7_16.ft1d  ramp_16.ft1d  ramp_32.data  sinc_16.ft1d  sinc_32.ft1d  sinus_16.ft1d  sinus_32.data  step_16.ft1d  step_32.data
src/: aboutdialog.cpp  aboutdialog.h  displaysignalwidget.cpp  displaysignalwidget.h  displaysignalwidgetinteractive.cpp  displaysignalwidgetinteractive.h  filterdialog.cpp  filterdialog.h  fourierspiral2.cpp  fourierspiral2.h  fourierspiralwidget.cpp  fourierspiralwidget.h  glob_includes.h  helpdialog.cpp  helpdialog.h  localization.cpp  localization.h  main.cpp  mainwindow.cpp  mainwindow.h  predefinedsignalsdialog.cpp  predefinedsignalsdialog.h  signal.cpp  signal.h
src/qcustomplot/: qcustomplot.cpp  qcustomplot.h
translation/: cs.xml  de.xml  en.xml  fr.xml  sk.xml
